Fix spacing

--- a/style.43.css
+++ b/style.43.css
@@ -403,10 +403,6 @@ li.game-bottom {
   .wins {
     padding: 2px 6px;
   }
-
-  li.game-top .wins {
-    top: 0;
-  }
 }
 
 @media(max-width: 465px) {
